--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -347,13 +347,21 @@ To accompany this, {productname} 6.3 now allows for the creation of a separate `
 NOTE: If no separate values are set for `color_map_forground` and `color_map_background`, they still default to the shared or previous values as before.
 
 
-=== New addView function added to editor.ui.registry which makes it possible to register custom editor views.
-=== New ToggleView command which makes it possible to hide or show registered custom views.
+=== A new addView API was added to editor.ui.registry 
 
-// https://ephocks.atlassian.net/browse/TINY-9210
-// @bforte review required -- Feedback provided is to keep this minimal.
-{productname} 6.3 now gives users the ability to register `custom` editor views with use of the new  `addView` API.
+The new `addView` API registers a new view container.
 
+This container, which is off (hidden) by default, is attached to the main view.
+
+In this default state, the main editor view is shown and the `addView`-specific view is hidden.
+
+When `addView` is turned on, the main editor view is hidden, and the `addView`-specific view is shown.
+
+Accompanying this new API is a new `ToggleView` command.
+
+The `ToggleView` command can, as its name suggest, toggle view visibility.
+
+As well, the `ToggleView` command can be queried for it current state.
 
 
 === New color_default_foreground and color_default_background options to set the initial default color for the forecolor and backcolor toolbar buttons and menu items.
