DOC-1754: /partials/configuration/advanced-typography.adoc
Supported languages table added.

--- a/modules/ROOT/partials/configuration/advanced-typography.adoc
+++ b/modules/ROOT/partials/configuration/advanced-typography.adoc
@@ -24,6 +24,94 @@ tinymce.init({
 });
 ----
 
+=== Currently supported languages
+
+[cols="1,1"]
+|===
+|Supported language |Language code 
+
+|Belarusian
+|be
+
+|Bulgarian
+|bg
+
+|Catalan
+|ca
+
+|Danish
+|da
+
+|Dutch
+|nl
+
+|English (UK)
+|en-GB
+
+|English (US)
+|en-US
+
+|Esperanto
+|eo
+
+|Estonian
+|et
+
+|Finnish
+|fi
+
+|German
+|de
+
+|Greek
+|el
+
+|Hungarian
+|hu
+
+|Irish
+|ga
+
+|Italian
+|it
+
+|Latvian
+|lv
+
+|Norwegian
+|no
+
+|Polish
+|pl
+
+|Romanian
+|ro
+
+|Russian
+|ru
+
+|Servian
+|sr
+
+|Slovak
+|sk
+
+|Slovenian
+|sl
+
+|Spanish
+|es
+
+|Swedish
+|sv
+
+|Turkish
+|tr
+
+|Ukraninan
+|uk
+
+|===
 
 [[typography_custom_rules]]
 == `+typography_custom_rules+`
