DOC-1754_2: /partials/configuration/advanced-typography.adoc
Added note re two more options to document: typography_default_lang and typography_langs.

--- a/modules/ROOT/partials/configuration/advanced-typography.adoc
+++ b/modules/ROOT/partials/configuration/advanced-typography.adoc
@@ -116,6 +116,11 @@ tinymce.init({
 
 |===
 
+// two further options to be documented
+// typography_default_lang
+// typography_langs
+// Test Fiddle used by QA team for reference: https://fiddle.tiny.cloud/uqiaab/58
+
 [[typography_custom_rules]]
 == `+typography_custom_rules+`
 
