--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -145,6 +145,29 @@ In previous versions of {productname} the accessibility checker used the same tr
 
 For information on the **Accessibility Checker** plugin, see: xref:a11ychecker.adoc[Accessibility Checker].
 
+=== Advanced Code Editor
+// @bforte review required.
+// https://ephocks.atlassian.net/browse/TINY-8964 
+==== Apply new design options around advcode for `inline` mode users.
+
+In {productname} 6.3, users now have the option to force the Advanced Code Editor within {productname}’s existing editor space, rather than displaying it in a seperate dialog box. 
+
+The benefits for using `advcode` in {productname} 6.3, is that mobile and narrow screen users is the improved benefits to the UX as there is no need to have a `ToggleView` button in the viewport.
+
+Basic setup for `inline` mode users as below.
+
+[source,js]
+----
+tinymce.init({
+  selector: "textarea",
+  plugins: [
+ 	"advcode" 
+    ],
+	advcode_inline: true, // To use this option, set value to "true".
+    toolbar: "code"
+});
+----
+
 === Checklist 2.0.2
 
 The {productname} 6.3 release includes an accompanying release of the **Checklist** premium plugin.
