--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -686,7 +686,7 @@ This is a presentation issue only. The _Click for more info_ button still works 
 
 There is, as of this release, no specific workaround.
 
-NOTE: if the _Click for more info_ button is navigated to using the Tab key, and then the Return key is pressed to activate the button and load the more information page, the blue outline does appear in Safari 16.1 after the Return key is pressed.
+NOTE: If the _Click for more info_ button is navigated to using the Tab key, and then the Return key is pressed to activate the button and load the more information page, the blue outline does appear in Safari 16.1 after the Return key is pressed.
 
 
 === Checkmark over the current color is not displayed when ‘Text color’ or ‘Background color’ is accessed from the {productname} menu
