--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -253,7 +253,7 @@ In {productname} 6.3, to support this feature, the editor will check all `mergeT
 
 In the event the `mergeTag` length exceeds this, the item will not be accepted by the editor.
 
-NOTE: some non-ASCII characters or Unicode codepoints count as more than one character.
+NOTE: Some non-ASCII characters or Unicode codepoints count as more than one character.
 
 For information on the **Merge tags** plugin, see: xref:mergetags.adoc[Merge Tags].
 
