--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -712,7 +712,7 @@ If text in a {productname} document is formatted in the following order, the che
 . Apply a Text color
 . Apply a Background color
 
-This presentation issue does not affect functionality. Selecting an new *Background color*, either via the *Format* menu or the toolbar, changes the selected text’s background color, as expected.
+This presentation issue does not affect functionality. Selecting a new *Background color*, either via the *Format* menu or the toolbar, changes the selected text’s background color, as expected.
 
 A workaround is to apply inline formatting after applying the Text and Background color. When the inline formatting is applied after the Text and Background colors are applied, the presentation error does not occur.
 
