--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -676,7 +676,7 @@ A workaround does exist to resolve this issue: if the More button disappears, re
 
 === In Safari 16.1, the ‘Click for more info’ button in Accessibility Checker dialogs is not outlined when made active
 
-*Accessibility Checker* dialogs for accessibility Errors and Warnings include a _Click for more info_ button: a coloured square containing a circled question mark.
+*Accessibility Checker* dialogs for accessibility Errors and Warnings include a _Click for more info_ button: a colored square containing a circled question mark.
 
 When this button is navigated to using keyboard navigation, the button is highlighted and a blue outline appears around the highlighted button.
 
