--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -619,7 +619,7 @@ As of {productname} 6.3, the `content_css_cors` option now configures the `tinym
 
 In previous versions of {productname}, when running on Firefox and after pressing Enter or Return to execute an `mceInsertContent` command (to, for example, add a merge tag to a {productname} document), xref:content-behavior-options.adoc#text_patterns[text_patterns] moved the insertion point to the previous line.
 
-This error has been corrected in {productname} 6.3. When running {productname} 6.3 on Firefox and creating a merge tag using `mceInsertContent`, pressing the Enter or Return to generate the desired merge tag moves the insertion point to the end of said newly-created merge tag, as expected.
+This error has been corrected in {productname} 6.3. When running {productname} 6.3 on Firefox and creating a merge tag using `mceInsertContent`, pressing Enter or Return to generate the desired merge tag moves the insertion point to the end of said newly-created merge tag, as expected.
 
 
 [[security-fixes]]
