--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -384,7 +384,7 @@ Accompanying this new API is a new `ToggleView` command.
 
 The `ToggleView` command can, as its name suggest, toggle view visibility.
 
-As well, the `ToggleView` command can be queried for it current state.
+As well, the `ToggleView` command can be queried for its current state.
 
 
 === New color_default_foreground and color_default_background options to set the initial default color for the forecolor and backcolor toolbar buttons and menu items.
