--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -357,7 +357,7 @@ When custom colors are selected from the Text color or Background color menus, t
 
 When chosen, these custom colors are still added to the Text color and Background color menus. But they are now stored separately from the default color sets used by both menus.
 
-NOTE: When a user adds a custom color to the `color_map_background` pallete, the editor does not replicate the new color in the `color_map_foreground` pallete.
+NOTE: When a user adds a custom color to the `color_map_background` palette, the editor does not replicate the new color in the `color_map_foreground` palette.
 
 === Added optional storageKey property to `colorinput` component
 
