DOC-1754: advanced-typography.adoc Added documentation for typography_langs and typography_default_lang

--- a/modules/ROOT/partials/configuration/advanced-typography.adoc
+++ b/modules/ROOT/partials/configuration/advanced-typography.adoc
@@ -116,9 +116,45 @@ tinymce.init({
 
 |===
 
-// two further options to be documented
 // typography_default_lang
+// @bforte review required
+[[typography_default_lang]]
+== `+typography_default_lang+`
+
+This option gives the user the ability to pre-set a default typography language within the {productname} editor.  By setting up the `typography_default_lang`, each time the user opens the {productname} editor, it will automatically default to the new default language applied.
+
+Basic setup for {productname}'s `typography_default_lang` as below.
+
+[source,js,subs="attributes+"]
+----
+tinymce.init({
+  selector: "textarea",
+  menu: { tools: { title: 'Tools', items: 'code wordcount typography' }},
+  plugins: "typography",
+  toolbar: "typography",
+	typography_default_lang: "en-US", // Define the default language here, example: "en-US"
+});
+----
+
 // typography_langs
+[[typography_langs]]
+== `+typography_langs+`
+
+This option allows the user to apply language-specific typography rules to particular text selections within the {productname} editor.
+
+When setting up `typography_langs` in {productname} the `lang` values are required to be set such as `+"en-US", "de", "es"+`, which will then populate the typography language dropdown list for the user to select from when applying language-specific typography rules to the desired text field.
+
+[source,js,subs="attributes+"]
+----
+tinymce.init({
+  selector: "textarea",
+  plugins: "typography",
+  toolbar: "typography",
+	typography_langs: [ "en-US", "de", "es" ], // Required to set specific typography language rules.
+});
+</script>
+----
+
 // Test Fiddle used by QA team for reference: https://fiddle.tiny.cloud/uqiaab/58
 
 [[typography_custom_rules]]
