--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -213,7 +213,11 @@ The {productname} 6.3 release includes an accompanying release of the **Merge ta
 
 A new command, `mceMergeTag`, is now available as a Text Patterns option.
 
-When this command is added as a `text_pattern`, manually typing a complete Merge Tag, including the prefix and suffix strings, into a {productname} document will result in the entered string being turned into an active merge tag when the string is completed by having a word boundary character added immediately after it.
+Previously only a predefined list of merge tags could be used. When the new `mceMergeTag` command is added to `text_patterns`, any text selection content can be converted into a merge tag.
+
+As well, configuring the inline text_pattern with this command allows merge tags to be entered by manual typing.
+
+Type the prefix, some content, the suffix, and then a word boundary character, and the `mceMergeTag` command will immediately wrap that content in a complete merge tag.
 
 In the following example, the Merge Tag prefix and suffix are the default, `{{` and `}}`
 
