DOC-1754_2: /partial/configuration/advanced-typography.adoc
Changed section of `typography_rules` example code to array, as per @yacodes note.

--- a/modules/ROOT/partials/configuration/advanced-typography.adoc
+++ b/modules/ROOT/partials/configuration/advanced-typography.adoc
@@ -231,10 +231,12 @@ tinymce.init({
   plugins: '{plugincode}',
   toolbar: '{plugincode}',
   language: 'en_US', // This is required to configure the default language used by typography.
-  typography_rules: {
-    en: ['en/quotes', 'en/spaces']
-    es: ['es/quotes', 'es/spaces']
-    }
+  typography_rules: [
+    'common/punctuation/quote',
+    'en-US/dash/main',
+    'common/nbsp/afterParagraphMark',
+    'common/nbsp/afterSectionMark',
+  ]
 });
 ----
 
