DOC-1754_2: advanced-typography.adoc
Replaced introductory paragraph with equivalent paragraph (primarily the work of @kemister85) from 6.3 Relese Notes section on Advanced Typography. This, among other things, deals with the problem of ‘interactive’ and ‘automatic’ being parsed unhelpfully by readers, as per @ephox-morgan’s note.

--- a/modules/ROOT/pages/advanced-typography.adoc
+++ b/modules/ROOT/pages/advanced-typography.adoc
@@ -11,7 +11,7 @@ include::partial$misc/admon-premium-plugin.adoc[]
 
 include::partial$misc/admon-requires-6.3v.adoc[]
 
-The {pluginname} plugin, depending on its setting, automatically or interactively replaces common typewriter-style characters with their professional typesetter’s equivalents.
+The {pluginname} plugin, depending on its setting, can replace common typewriter-style characters with their professional typesetter equivalents after the _Advanced Typography_ button is pressed. This action will modify either the entire content for the {productname} document or the specific text selection highlighted by the user.
 
 For example, if English-language typography rules are set, the {pluginname} plugin can automatically replace an open-hyphen (` - `) with an em-dash (`—`). And it can automatically replace the teardrop apostrophe (`'`) with opening and closing quote marks (`‘` and `’`).
 
