DOC-1754_2: typography-toolbar-buttons.adoc
Typo correction: s/typopgrahy/typopgraphy/.

--- a/modules/ROOT/partials/toolbar-button-ids/typography-toolbar-buttons.adoc
+++ b/modules/ROOT/partials/toolbar-button-ids/typography-toolbar-buttons.adoc
@@ -1,5 +1,5 @@
 [cols="1,3",options="header"]
 |===
 |Toolbar button identifier |Description
-|`+typopgrahy+` | [ TO BE ADDED ]
+|`+typopgraphy+` | [ TO BE ADDED ]
 |===
