DOC-1827: inlineCSS.adoc Uncommented include: partial to render inlineCSS-apis.adoc

--- a/modules/ROOT/pages/inline-css.adoc
+++ b/modules/ROOT/pages/inline-css.adoc
@@ -99,4 +99,4 @@ include::partial$events/{plugincode}-events.adoc[]
 
 The {pluginname} plugin provides the following APIs.
 
-// include::partial$plugin-apis/{plugincode}-apis.adoc[]
+include::partial$plugin-apis/{plugincode}-apis.adoc[]
